[tool.poetry]
name = "hello"
version = "0.1.1"
description = ""
authors = ["denys.havryliv <denys.havryliv@gmail.com>"]

[tool.semantic_release]
version_variable = [
    "src_folder/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.dev-dependencies]
pytest = "5.2"
black = "^23.1.0"
pre-commit = "^3.0.3"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
