[tool.poetry]
name = "hello"
version = "0.1.1"
description = ""
authors = ["denys.havryliv <denys.havryliv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[tool.poetry.group.lint.dependencies]
black = "^23.1.0"
pre-commit = "^3.0.3"
mypy = "^0.991"
flake8 = "^6.0.0"
isort = "^5.12.0"


[tool.poetry.group.semver.dependencies]
python-semantic-release = "^7.33.1"

[tool.semantic_release]
version_variable = "hello/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
branch = "main"
upload_to_pypi = false
upload_to_release = false
version_source = "tag"
commit_version_number = true # required for version_source = "tag"
tag_commit = true
hvcs = "github" # gitlab is also supported
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
